@@ -17,6 +17,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/image.c: removed unused variables.
+common/item.c: conditionally remove unused variables.
+common/map.c: conditionally define variables, unused under Windows.
+include/global.h: turned off a conversion warning under Windows.
+Ryo 2004-02-28
+
+
 common/living.c: changed 'signed char' to 'sint8' for set|get|change_attr_value.
 common/map.c: map size is sint16, for arch_blocked.
 include/libproto.h: update prototypes for set|get|change_attr_value and arch_blocked.
